[OPIK-8419] [BE] address review: null-safe normalization, fix the published example
- withNormalizedWindow returned Map.copyOf, which rejects null values, so a
  config carrying one raised an NPE from inside the helper and answered 500
  where the validation would have answered 400. It reaches the read path too,
  so a stored row could trigger it as well as a request body. Returns an
  unmodifiable view instead, and a unit test pins it -- the test fails against
  Map.copyOf.

- The published Fern PUT example advertised config_value {threshold_ms: '500'}
  for a threshold:latency config. The new validation rejects it, but the
  example was already wrong: nothing in the backend has ever read threshold_ms,
  so it documented an alert that could not fire. Corrected to threshold and
  window rather than adding a compatibility mapping for a key nothing honours.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>